fixed some bugs with position and add lane

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Описание</a></li>
+                <li><a href="#">Описание</a>
                 <li><a href="#">Каталог</a></li>
                 <li><a href="#">Отзывы</a></li>
                 <li><a href="#">Доставка</a></li>
@@ -39,7 +39,10 @@
         <div class="girl">
             <div class="left_girl">
                 <h1>Матовая помада <span>Kylie Jenner Lip Kit</span></h1>
-                <img src="./img/pomade-with-price.png" alt="">
+               <div class="price_mb"> <img src="./img/pomade-with-price.png" alt="">
+                   <h2>219</h2>
+                   <span>грн</span>
+               </div>
                 <p>Тут будет текст, который будет мотивировать купить помаду а еще тут должно быть написано что это
                     ограниченное предолжение кайли помада с карандашом всего за 220 грн вместо 400 предыдущих Это все
                     утром напишет Даша</p>
