add link to phone number

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </ul>
         </nav>
         <div class="phone">
-            <p class="MTS"> +38 <span>050 291 70 20</span></p>
-            <p class="life"> +38 <span>093 183 09 33</span></p>
+            <p class="MTS"><a href="#1">+38 <span>050 291 70 20</span></a></p>
+            <p class="life"><a href="#1">+38 <span>093 183 09 33</span></a></p>
         </div>
     </div>
 </header>
